@startuml

title __SERVICE's Class Diagram__\n

  namespace survival2d {
    namespace login {
      namespace service {
        interface survival2d.login.service.UserService {
            {abstract} + createUser()
            {abstract} + getAllUsers()
            {abstract} + getUser()
            {abstract} + saveUser()
        }
      }
    }
  }
  

  namespace survival2d {
    namespace login {
      namespace service {
        class survival2d.login.service.UserServiceImpl {
            + createUser()
            + getAllUsers()
            + getUser()
            + saveUser()
            + setMaxIdService()
            + setUserRepo()
        }
      }
    }
  }
  

  survival2d.login.service.UserServiceImpl .up.|> survival2d.login.service.UserService
  survival2d.login.service.UserServiceImpl o-- survival2d.service.MaxIdService : maxIdService
  survival2d.login.service.UserServiceImpl o-- survival2d.login.repo.UserRepo : userRepo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
